some bug fixes
