# internal/models/asker.go
@@ -5,6 +5,10 @@ import (
 	"time"
 )
 
+const (
+	SuccessRestResponse = "Success"
+)
+
 type Empty struct{}
 
 type Info struct {
@@ -14,38 +18,17 @@ type Info struct {
 	URLs     map[string]Empty
 }
 
-// swagger:response infoResponse
 type InfoRestDTO struct {
-	// example: 10s
-	Interval string `json:"interval"`
-	// example: ["https://www.google.com/", "https://yandex.com/"]
-	URLs []string `json:"urls"`
+	Interval string   `json:"interval"`
+	URLs     []string `json:"urls"`
 }
 
-// swagger:response listLatestResponse
 type Result struct {
-	// example: 2022-10-30T20:04:11.827677Z
-	Date time.Time `json:"date"`
-	// example: {"http://xydsffew.com/": false, "https://www.google.com/": true}
+	Date time.Time       `json:"date"`
 	URLs map[string]bool `json:"urls"`
 }
 
-// swagger:response listResponse
 type Results struct {
-	// example: {
-	//  "results": [
-	//    {
-	//      "date": "2022-10-30T20:04:06.840497Z",
-	//      "urls": {
-	//        "http://xydsffew.com/": false,
-	//        "https://www.google.com/": true,
-	//        "https://www.yahoo.com/": true,
-	//        "https://yandex.com/": true
-	//      }
-	//    }
-	//    }
-	//  ]
-	//}
 	Results []Result `json:"results"`
 }
 
