# internal/transport/rest/handler.go
@@ -1,11 +1,3 @@
-// Package classification URLASker.
-//
-//	Schemes: http
-//	BasePath: /api/v1
-//	Version: 0.0.1
-//	Host: localhost
-//
-// swagger:meta
 package rest
 
 import (
@@ -21,7 +13,6 @@ import (
 )
 
 // TODO: prometheus metrics (another contour - port)
-// TODO: give more explanation in user error response
 
 type Handler struct {
 	router *mux.Router
@@ -37,26 +28,16 @@ func (h *Handler) Register() {
 	h.router.HandleFunc("/liveness", h.Alive).Methods(http.MethodGet)
 	apiRouter := h.router.PathPrefix("/api/v1").Subrouter()
 	apiRouter.Use(SetCORSHeaders)
-	apiRouter.HandleFunc("/info", HandleError(h.GetInfo)).Methods(http.MethodGet)
-	apiRouter.HandleFunc("/listLatest", HandleError(h.ListLatestResult)).Methods(http.MethodGet)
-	apiRouter.HandleFunc("/list", HandleError(h.ListResults)).Methods(http.MethodGet)
-	apiRouter.HandleFunc("/setInterval", HandleError(h.SetInterval)).Methods(http.MethodPost)
-	apiRouter.HandleFunc("/setUrls", HandleError(h.SetURLs)).Methods(http.MethodPost)
-	apiRouter.HandleFunc("/addUrls", HandleError(h.AddURLs)).Methods(http.MethodPut)
-	apiRouter.HandleFunc("/deleteUrls", HandleError(h.DeleteURLs)).Methods(http.MethodDelete)
-	apiRouter.Use(mux.CORSMethodMiddleware(h.router))
+	apiRouter.HandleFunc("/info", HandleError(h.GetInfo)).Methods(http.MethodGet, http.MethodOptions)
+	apiRouter.HandleFunc("/listLatest", HandleError(h.ListLatestResult)).Methods(http.MethodGet, http.MethodOptions)
+	apiRouter.HandleFunc("/list", HandleError(h.ListResults)).Methods(http.MethodGet, http.MethodOptions)
+	apiRouter.HandleFunc("/setInterval", HandleError(h.SetInterval)).Methods(http.MethodPost, http.MethodOptions)
+	apiRouter.HandleFunc("/setUrls", HandleError(h.SetURLs)).Methods(http.MethodPost, http.MethodOptions)
+	apiRouter.HandleFunc("/addUrls", HandleError(h.AddURLs)).Methods(http.MethodPut, http.MethodOptions)
+	apiRouter.HandleFunc("/deleteUrls", HandleError(h.DeleteURLs)).Methods(http.MethodDelete, http.MethodOptions)
+	apiRouter.Use(mux.CORSMethodMiddleware(apiRouter))
 }
 
-// swagger:operation GET /info Methods idInfo
-//
-// Get info about asker service.
-// ---
-// responses:
-//
-//		'200': infoResponse
-//		'500':
-//	    description: internal server error
-//	    type: string
 func (h *Handler) GetInfo(w http.ResponseWriter, r *http.Request) error {
 	data, err := h.asker.GetInfo(context.Background())
 	if err != nil {
@@ -82,19 +63,6 @@ func (h *Handler) GetInfo(w http.ResponseWriter, r *http.Request) error {
 	return nil
 }
 
-// swagger:operation GET /listLatest Methods idListLatest
-//
-// Get latest result.
-// ---
-// responses:
-//
-//		'200': listLatestResponse
-//	 	'404':
-//	    description: not found
-//	    type: string
-//		'500':
-//	    description: internal server error
-//	    type: string
 func (h *Handler) ListLatestResult(w http.ResponseWriter, r *http.Request) error {
 	data, err := h.asker.ListLatestResult(context.Background())
 	if err != nil {
@@ -103,7 +71,7 @@ func (h *Handler) ListLatestResult(w http.ResponseWriter, r *http.Request) error
 	}
 
 	if len(data.URLs) == 0 {
-		return NotFoundErr.SetDebugMsg("not found")
+		return NotFoundErr
 	}
 
 	w.Header().Set("Content-Type", "application/json")
@@ -118,35 +86,22 @@ func (h *Handler) ListLatestResult(w http.ResponseWriter, r *http.Request) error
 	return nil
 }
 
-// swagger:operation GET /list Methods idList
-//
-// Get all results between two dates.
-// ---
-// responses:
-//
-//		'200': listResponse
-//	 	'404':
-//	    description: not found
-//	    type: string
-//		'500':
-//	    description: internal server error
-//	    type: string
 func (h *Handler) ListResults(w http.ResponseWriter, r *http.Request) error {
 	// RFC3339 time format, RFC3339: year-month-day T hours-minutes-seconds Z
 	dateFromStr := r.URL.Query().Get("dateFrom")
 	dateFrom, err := time.Parse(time.RFC3339, dateFromStr)
 	if err != nil {
-		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse dateFrom param due to error: %v", err.Error()))
+		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse dateFrom param due to error: %v", err.Error())).SetMsg("invalid dateFrom param")
 	}
 	// RFC3339 time format, RFC3339: year-month-day T hours-minutes-seconds Z
 	dateToStr := r.URL.Query().Get("dateTo")
 	dateTo, err := time.Parse(time.RFC3339, dateToStr)
 	if err != nil {
-		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse dateTo param due to error: %v", err.Error()))
+		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse dateTo param due to error: %v", err.Error())).SetMsg("invalid dateTo param")
 	}
 
 	if !dateTo.After(dateFrom) {
-		return BadReqErr.SetDebugMsg("dateFrom latter than dateTo param")
+		return BadReqErr.SetDebugMsg("dateFrom latter than dateTo param").SetMsg("dateFrom latter than dateTo param")
 	}
 
 	data, err := h.asker.ListResults(context.Background(), dateFrom, dateTo)
@@ -156,7 +111,7 @@ func (h *Handler) ListResults(w http.ResponseWriter, r *http.Request) error {
 	}
 
 	if len(data.Results) == 0 {
-		return NotFoundErr.SetDebugMsg("not found")
+		return NotFoundErr
 	}
 
 	w.Header().Set("Content-Type", "application/json")
@@ -171,28 +126,11 @@ func (h *Handler) ListResults(w http.ResponseWriter, r *http.Request) error {
 	return nil
 }
 
-// swagger:operation POST /setInterval Methods idSetInterval
-//
-// Set interval of asking.
-// ---
-// produces:
-// - text/plain
-// responses:
-//
-//		'200':
-//	    description: Success
-//	    type: string
-//	 	'400':
-//	    description: bad request
-//	    type: string
-//		'500':
-//	    description: internal server error
-//	    type: string
 func (h *Handler) SetInterval(w http.ResponseWriter, r *http.Request) error {
 	intervalStr := r.URL.Query().Get("interval")
 	interval, err := time.ParseDuration(intervalStr)
 	if err != nil {
-		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse interval param due to error: %v", err.Error()))
+		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse interval param due to error: %v", err.Error())).SetMsg("invalid interval param")
 	}
 
 	if err = h.asker.SetInterval(context.Background(), interval); err != nil {
@@ -202,37 +140,20 @@ func (h *Handler) SetInterval(w http.ResponseWriter, r *http.Request) error {
 
 	w.Header().Set("Content-Type", "text/plain")
 	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("Success"))
+	w.Write([]byte(models.SuccessRestResponse))
 
 	return nil
 }
 
-// swagger:operation POST /setUrls Methods idSetUrls
-//
-// Rewrite set of urls.
-// ---
-// produces:
-// - text/plain
-// responses:
-//
-//		'200':
-//	    description: Success
-//	    type: string
-//	 	'400':
-//	    description: bad request
-//	    type: string
-//		'500':
-//	    description: internal server error
-//	    type: string
 func (h *Handler) SetURLs(w http.ResponseWriter, r *http.Request) error {
 	var data []string
 	err := json.NewDecoder(r.Body).Decode(&data)
 	if err != nil {
-		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse body due to error: %v", err.Error()))
+		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse body due to error: %v", err.Error())).SetMsg("invalid body")
 	}
 	for _, rawUrl := range data {
 		if _, err = url.ParseRequestURI(rawUrl); err != nil {
-			return BadReqErr.SetDebugMsg(fmt.Sprintf("invalid url in body due to error: %v", err.Error()))
+			return BadReqErr.SetDebugMsg(fmt.Sprintf("invalid url in body due to error: %v", err.Error())).SetMsg(fmt.Sprintf("invalid url %v in body", rawUrl))
 		}
 	}
 
@@ -243,37 +164,20 @@ func (h *Handler) SetURLs(w http.ResponseWriter, r *http.Request) error {
 
 	w.Header().Set("Content-Type", "text/plain")
 	w.WriteHeader(http.StatusCreated)
-	w.Write([]byte("Success"))
+	w.Write([]byte(models.SuccessRestResponse))
 
 	return nil
 }
 
-// swagger:operation PUT /addUrls Methods idAddUrls
-//
-// Append urls to set of urls.
-// ---
-// produces:
-// - text/plain
-// responses:
-//
-//		'200':
-//	    description: Success
-//	    type: string
-//	 	'400':
-//	    description: bad request
-//	    type: string
-//		'500':
-//	    description: internal server error
-//	    type: string
 func (h *Handler) AddURLs(w http.ResponseWriter, r *http.Request) error {
 	var data []string
 	err := json.NewDecoder(r.Body).Decode(&data)
 	if err != nil {
-		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse body due to error: %v", err.Error()))
+		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse body due to error: %v", err.Error())).SetMsg("invalid body")
 	}
 	for _, rawUrl := range data {
 		if _, err = url.ParseRequestURI(rawUrl); err != nil {
-			return BadReqErr.SetDebugMsg(fmt.Sprintf("invalid url in body due to error: %v", err.Error()))
+			return BadReqErr.SetDebugMsg(fmt.Sprintf("invalid url in body due to error: %v", err.Error())).SetMsg(fmt.Sprintf("invalid url %v in body", rawUrl))
 		}
 	}
 
@@ -284,37 +188,20 @@ func (h *Handler) AddURLs(w http.ResponseWriter, r *http.Request) error {
 
 	w.Header().Set("Content-Type", "text/plain")
 	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("Success"))
+	w.Write([]byte(models.SuccessRestResponse))
 
 	return nil
 }
 
-// swagger:operation DELETE /deleteUrls Methods idDeleteUrls
-//
-// Delete urls from set of urls.
-// ---
-// produces:
-// - text/plain
-// responses:
-//
-//		'200':
-//	    description: Success
-//	    type: string
-//	 	'400':
-//	    description: bad request
-//	    type: string
-//		'500':
-//	    description: internal server error
-//	    type: string
 func (h *Handler) DeleteURLs(w http.ResponseWriter, r *http.Request) error {
 	var data []string
 	err := json.NewDecoder(r.Body).Decode(&data)
 	if err != nil {
-		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse body due to error: %v", err.Error()))
+		return BadReqErr.SetDebugMsg(fmt.Sprintf("failed to parse body due to error: %v", err.Error())).SetMsg("invalid body")
 	}
 	for _, rawUrl := range data {
 		if _, err = url.ParseRequestURI(rawUrl); err != nil {
-			return BadReqErr.SetDebugMsg(fmt.Sprintf("invalid url in body due to error: %v", err.Error()))
+			return BadReqErr.SetDebugMsg(fmt.Sprintf("invalid url in body due to error: %v", err.Error())).SetMsg(fmt.Sprintf("invalid url %v in body", rawUrl))
 		}
 	}
 
@@ -325,7 +212,7 @@ func (h *Handler) DeleteURLs(w http.ResponseWriter, r *http.Request) error {
 
 	w.Header().Set("Content-Type", "text/plain")
 	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("Success"))
+	w.Write([]byte(models.SuccessRestResponse))
 
 	return nil
 }
